--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "keywords": [],
     "main": "src/index.js",
     "dependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -16,8 +16,8 @@
         "lint": "eslint src --ext .js,.jsx"
     },
     "devDependencies": {
-        "react-scripts": "latest",
-        "eslint": "^8.57.0"
+        "eslint": "^8.57.0",
+        "react-scripts": "^5.0.0"
     },
     "browserslist": [
         ">0.2%",
